--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <p>разметка</p>
+    <header>
+        <ul>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+        </ul>
+    </header>
+
+    <main>
+        <p>Основной контент</p>
+    </main>
+
+    <footer>
+        <p>Erdotesku Stas</p>
+    </footer>
 </body>
 </html> 
